CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(GLogTest)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../include)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../lib/)

AUX_SOURCE_DIRECTORY(. SOURCES)
ADD_EXECUTABLE(glogtest ${SOURCES})
TARGET_LINK_LIBRARIES(glogtest pthread glog)

